<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FuLiCenter</string>
    <string name="Version_number_is_wrong">Version number is wrong</string>
    <string name="now_refresh">now_refresh</string>
    <string name="no_more">no more</string>
    <string name="load_more">load more</string>
    <string name="User_name">User name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="Nick_name">Nick name</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_shopping">ShoppingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_goods_detail">GoodsDetailActivity</string>
    <string name="title_activity_boutique_child">BoutiqueChildActivity</string>
    <string name="login_fail_error_password">登陆失败，错误的用户名或密码</string>
    <string name="user_database_error">user database error</string>
    <string name="update_user_nick">update user nick</string>
    <string name="update_fail">update fail</string>
    <string name="update_nick_fail_unmodify">user nick unmodify</string>
    <string name="update_user_nick_success">update user nick success</string>4
    <string name="collect_title">collects</string>
    <string name="delete_collect_fail">delete collect fail</string>
    <string name="add_goods_success">add goods success</string>
    <string name="add_goods_fail">add goods fail</string>
    <string name="order_nothing">order is noting</string>
    <string name="confirm_order">confirm order</string>
    <string name="pingpp_title_activity_pay_sucessed" />
    <string name="pingpp_pay_failed" />
</resources>